[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.188"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["handlebars"]

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
